export default class ResetInterface {
  reload() {}
}